# simple-openai-sdk-MCP

./: .gitignore  README.md  pyproject.toml  sample.env
src/: setup.py
src/simple_mcp/: chat_history_20250707_153002.json  chat_history_20250707_160611.json  claude_integration.py  config.json  debug_history_20250716_120225.json  demo.py  gemini_integration.py  nova_integration.py  openai_integration.py  prompts.py  run1.json  run2.json
src/simple_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
