[project]
name = "simple_mcp"
version = "0.1.0"
description = "Simple MCP demo with OpenAI agents"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "openai-agents>=0.1.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "python-dateutil>=2.8.2",
    "wikipedia-mcp==1.5.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
