[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_mcp"
version = "1.0.0"
description = "Multi-Model Agent Demo with MCP Tools"
requires-python = ">=3.8"
authors = [
    {name = "MCP Demo"}
]
readme = "README.md"
dependencies = [
    "litellm>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "mcp>=1.12.2",
    "python-dotenv>=0.19.0",
    "boto3>=1.28.0",
    "anthropic>=0.7.0",
    "google-ai-generativelanguage>=0.4.0",
    "openai-agents>=0.2.3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/yourusername/simple_mcp"
"Bug Tracker" = "https://github.com/yourusername/simple_mcp/issues"
